Simple-Designs/Combinational/Multiplexer/Multiplexer_N_to_1/multiplexer/solution1/sim/wrapc/err.log
In file included from C:/Users/kwokt/Desktop/Clone_HLS-Models/HLS-Models/Simple-Designs/Combinational/Multiplexer/Multiplexer_N_to_1/multiplexer.cpp:1:0:
C:/Users/kwokt/Desktop/Clone_HLS-Models/HLS-Models/Simple-Designs/Combinational/Multiplexer/Multiplexer_N_to_1/multiplexer.hpp:19:1: error: 'type' does not name a type
 
 ^   
C:/Users/kwokt/Desktop/Clone_HLS-Models/HLS-Models/Simple-Designs/Combinational/Multiplexer/Multiplexer_N_to_1/multiplexer.hpp:23:1: error: 'type' does not name a type
C:/Users/kwokt/Desktop/Clone_HLS-Models/HLS-Models/Simple-Designs/Combinational/Multiplexer/Multiplexer_N_to_1/multiplexer.hpp:34:1: error: 'type' does not name a type
make: *** [obj/multiplexer.cpp_pre.cpp.tb.o] Error 1
